--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body, html{
 	min-height: 100%;
 }
 body{
-	background-image: url("mainbg.jpg");
+	background-image: url("../Images/mainbg.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
