--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,7 +74,7 @@ body{
 	zoom: 1.0;
 	width: extend-to-zoom;
 }
-@media only screen and (min-height: 800px){
+@media only screen and (min-width: 800px){
 	.discord{
 		display: flex;
 	}
