--- a/es/CSS/styles.css
+++ b/es/CSS/styles.css
@@ -1,136 +1,168 @@
-body, html{
-	min-height: 100%;
+/*Flexbox*/
+
+.flexbox{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
 }
-body{
-	background-image: url("../../Images/mainbg.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
+
+/*First element*/
+
+.wrapper{
+    background-image: url("../pictures/mainbg.jpg");
+    padding-top: 10em;
+    padding-bottom:15em;
 }
-#projectTab {
-	padding: 0;
-	background-color: rgba(0, 0, 255, 0.1);
-	position: absolute;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-	top: 200px;
-	left: 0px;
+
+.wrapper h1{
+    display:block;
+    color: #edf0f1;
+    font-family: 'Pushster', cursive;
+    font-weight: 400;
+    font-size: 90px;
+    text-align: center;
 }
-#projectHead{
-	background-color: rgba(0, 0, 255, 0.6);
-	display: flex;
-	margin-bottom: 10px;
-	justify-content: center;
+
+.wrapper p{
+    padding-top: 2em;
+    display: block;
+    text-align: center;
+    color: #edf0f1;
+    font-family: 'Secular One', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
 }
-#projectHead h3{
-	font-family: "Times New Roman";
-	color: white;
-	text-align: center;
-	font-size: 5px;
+
+/*Second element*/
+
+.wrapper2{
+    background-image: linear-gradient(#081c2c, #080e14);
+    padding-top: 3em;
+    padding-bottom: 20em;
 }
-#projectHead h3 a{
-	text-decoration: none;
-	color: white;
-	font-size: 30px;
-	font-family: 'Montserrat', sans-serif;
+
+.wrapper2 h3{
+    display: block;
+    padding-left: 3em;
+    padding-right: 1em;
+    padding-top: 2em;
+    color: #edf0f1;
+    font-family: 'Secular One', sans-serif;
+    font-weight: 400;
+    font-size: 50px;
 }
-#projectHead h3:hover{
-	background-color: #2986CC;
+
+.wrapper2 p{
+    display: block;
+    position: absolute;
+    padding-top: 5em;
+    padding-left: 8em;
+    padding-right: 1em;
+    color: #edf0f1;
+    font-family: 'Secular One', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    max-width: 35em;
 }
-#projectTab p{
-	font-family: 'Gemunu Libre', sans-serif;
-	font-family: 'Montserrat', sans-serif;
-	color: white;
-	text-align: center;
-	font-size: 14px;
+
+.wrapper2 img{
+    display: block;
+    position: relative;
+    left: 65em;
+    width: 25em;
+    border-radius: 50%;
 }
-.para{
-	font-family: 'Gemunu Libre', sans-serif;
-	font-family: 'Montserrat', sans-serif;
-	color: white;
-	font-size: 15px;
-	text-align: center;
+
+/*For mobile*/
+
+@media screen and (max-width: 1280px){
+    
+    .wrapper2 img{
+        top: 3em;
+        left: 50em;
+        width: 20em;
+    }
 }
-.discord {
-    display: none;
-	position: relative;
-	top: 15rem;
-	margin: auto;
-	width: 350px;
+
+@media screen and (max-width: 1030px){
+    
+    .wrapper2 p{
+        padding-top: 1em;
+    }
+
+    .wrapper2 img{
+        top: 18em;
+        left: 20em;
+        width: 10em;
+    }
 }
-#discord{
-	position: relative;
-	text-align: center;
-	top: 15rem;
+
+@media screen and (max-width: 920px){
+    
+    .wrapper2 p{
+        padding-top: 1em;
+    }
+
+    .wrapper2 img{
+        top: 18em;
+        left: 20em;
+        width: 10em;
+    }
 }
-#discord p{
-	font-family: 'Gemunu Libre', sans-serif;
-	font-family: 'Montserrat', sans-serif;
-	color: white;
-	font-size: 20px;
+
+@media screen and (max-width: 850px){
+    
+    .wrapper2 p{
+        padding-top: 1em;
+    }
+
+    .wrapper2 img{
+        top: 18em;
+        left: 20em;
+        width: 10em;
+    }
 }
-#discord p a{
-	color: white;
+
+@media screen and (max-width: 430px){
+    
+    .wrapper{
+        padding-top: 1em;
+        padding-bottom: 10em;
+    }
+    
+    .wrapper h1{
+        font-size: 55px;
+        padding-top: 1em;
+    }
+
+    .wrapper2{
+        padding-bottom: 15em;
+    }
+
+    .wrapper2 h3{
+        padding-left: 1em;
+        font-size: 25px;
+    }
+
+    .wrapper2 p{
+        padding-left: 1em;
+        font-size: 15px;
+    }
+
+    .wrapper2 img{
+        width: 7em;
+        top: 13em;
+        left: 10em;
+    }
 }
-@viewport {
-	zoom: 1.0;
-	width: extend-to-zoom;
-}
-@media only screen and (min-width: 800px){
-	.discord{
-		display: flex;
-	}
-	#discord{
-		display: none;
-	}
-}
-@media only screen and (min-width: 768px){
-	#projectTab {
-		padding: 0;
-		background-color: rgba(0, 0, 255, 0.1);
-		position: relative;
-		box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-		top: 5rem;
-		margin-right: auto;
-		margin-left: auto;
-		width: 80%;
-	}
-	#projectHead{
-		background-color: rgba(0, 0, 255, 0.6);
-		display: flex;
-		margin-bottom: 10px;
-		justify-content: center;
-	}
-	#projectHead h3{
-		font-family: "Times New Roman";
-		color: white;
-		text-align: center;
-	}
-	#projectHead h3 a{
-		text-decoration: none;
-		color: white;
-		font-size: 40px;
-		font-family: 'Montserrat', sans-serif;
-	}
-	#projectHead h3:hover{
-		background-color: #2986CC;
-	}
-	#projectTab p{
-		text-align: center;
-		font-size: 20px;
-	}
-	.para{
-		font-size: 20px;
-		text-align: center;
-	}
-	.discord {
-		position: relative;
-		display: block;
-		top: 10rem;
-		margin: auto;
-		width: 350px;
-	}
-}
-@media only screen and (min-width: 1000px){
-	.discord {
-		top: 7rem;
-	}
+
+@media screen and (max-width: 280px){
+    
+    .wrapper2{
+        padding-bottom: 25em;
+    }
+
+    .wrapper2 img{
+        display: none;
+    }
 }
