--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+/*font-family: 'Montserrat', sans-serif;*/
+@import url("https://fonts.googleapis.com/css2?family=Pushster&display=swap");
+/*font-family: 'Pushster', cursive;*/
+
 * {
   box-sizing: border-box;
   margin: 0;
