--- a/css/project.css
+++ b/css/project.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Pushster&display=swap");
+/*font-family: 'Pushster', cursive;*/
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+/*font-family: 'Secular One', sans-serif;*/
+
 body{
     background-color: #161616;
 }
