--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Pushster&display=swap");
+/*font-family: 'Pushster', cursive;*/
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+/*font-family: 'Secular One', sans-serif;*/
+
 /*Flexbox*/
 
 .flexbox{
@@ -85,32 +90,6 @@
 }
 
 @media screen and (max-width: 1030px){
-    
-    .wrapper2 p{
-        padding-top: 1em;
-    }
-
-    .wrapper2 img{
-        top: 18em;
-        left: 20em;
-        width: 10em;
-    }
-}
-
-@media screen and (max-width: 920px){
-    
-    .wrapper2 p{
-        padding-top: 1em;
-    }
-
-    .wrapper2 img{
-        top: 18em;
-        left: 20em;
-        width: 10em;
-    }
-}
-
-@media screen and (max-width: 850px){
     
     .wrapper2 p{
         padding-top: 1em;
